# gyou

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  conanfile.py  main.cpp  sth.nash
cmake/: comp_opts.cmake
conan_local_packages/corral/: conanfile.py
conan_local_packages/reflex/: conanfile.py
include/gyou/: apply_change.hpp  array_utils.hpp  bash_ebuild.hpp  boost_stacktrace_format.hpp  file_to_string.hpp  get_latest_updates.hpp  get_what_to_change.hpp  git_worktree.hpp  http_requests.hpp  omega_exception.hpp  parse_ebuild.hpp  parsing_groupsci.hpp  parsing_one_ebuild.hpp  rss_parse_into_tree.hpp  string_replace.hpp  string_to_file.hpp  variants_utils.hpp
include/gyou/fetchers/: github.hpp
include/gyou/structs/: common_ctx.hpp  config.hpp  consts.hpp  ebuild_commit_specific.hpp  ebuild_parsed_data.hpp  result_of_parsing.hpp  return_code.hpp  service_enum.hpp  service_regex.hpp
include/gyou/structs/change_related/: commit_specific.hpp  pkg_type.hpp
include/gyou/structs/rss/: most_cases.hpp
include/gyou/utils/: array_utils.hpp  boost_stacktrace_format.hpp  debug.hpp  designated_array_initializers.hpp  rusty_macros.hpp  variants_utils.hpp
libs/quill_usage/: CMakeLists.txt  overwrite_log_macros.h  quill_static.cpp  quill_static.h
stories/: gcc.md
